fix dropdown menu covered

--- a/src/components/DropdownMenu.css
+++ b/src/components/DropdownMenu.css
@@ -1,4 +1,5 @@
 .dropdown-container {
+  
   position: relative;
 }
 
@@ -11,6 +12,7 @@
 }
 
 .dropdown-menu {
+  z-index: 1000; 
   position: absolute;
   top: 100%;
   right: 0;
